# governed-ai-data-access

./: .gitignore  CLAUDE.md  Makefile  README.md  create.sh
dataset/config/: dataset.yaml  synthea.properties
dataset/dbt/: README.md  dbt_project.yml  profiles.yml.template
dataset/ingest/: README.md  pyproject.toml
docs/: Book_Data_Pipeline_Plan.docx  chapter_map.md  implementation_guide.md
evaluation/: README.md
mcp_server/: README.md
rules/: README.md
scripts/: export_spec_to_yaml.py  spec_consistency_check.py
spec/: Companion_Dataset_Specification.xlsx
studio/: README.md
